--- a/PackageDelivery.Tests/PackageDelivery.Tests.csproj
+++ b/PackageDelivery.Tests/PackageDelivery.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectName\ProjectName.csproj" />  
+    <ProjectReference Include="..\PackageDelivery\PackageDelivery.csproj" />  
   </ItemGroup>
 
 </Project>
